--- a/html/dwz_header.html
+++ b/html/dwz_header.html
@@ -7,6 +7,7 @@
 	<li><a href="#" onclick='return dh_toUserCenter();'><i class="icon-user icon-large"></i><?cs var:comm.user_name ?></a></li>
 	<li><a href="#" id="a_logout" title="退出登录"><i class="icon-signout icon-large"></i>退出</a></li>
 	<li><a href="http://xrkmonitor.com/monitor/showdoc/showdoc/web/#/4?page_id=34" target='_blank' title="在线文档"><i class="icon-question icon-large"></i></a></li>
+	<li><a href='https://gitee.com/xrkmonitorcom/open' target='_blank'><img src='https://gitee.com/xrkmonitorcom/open/badge/star.svg?theme=dark' /></a>
 </ul>
 
 <ul id="navMenu">
