--- a/html/dwz_foot.html
+++ b/html/dwz_foot.html
@@ -1,9 +1,8 @@
 <a style='text-decoration:underline;' href='http://beian.miit.gov.cn' target='_blank'>粤ICP备19024085号-1.</a>&nbsp; 
 Copyright &copy; 2019-2020 字符云监控. &nbsp; 
 <a style='text-decoration:underline;' target="_blank" href="https://qm.qq.com/cgi-bin/qm/qr?k=QmGaFsgl2jyjorlgkpEJGrsFDsixNrD6&amp;jump_from=webapi">q群号：859052272</a>&nbsp;
-<a style='text-decoration:underline;' href='http://xrkmonitor.com' target='_blank'>云版本</a>&nbsp;
-. (建议使用 Chrome 或者 Firefox 浏览器)
-
+<a href='https://gitee.com/xrkmonitorcom/open' target='_blank'><img style='vertical-align:middle;' src='https://gitee.com/xrkmonitorcom/open/badge/star.svg?theme=dark' /></a>
+ (建议使用 Chrome 或者 Firefox 浏览器)
 <ul class="themeList" id="themeList" style='display:none'>
     <li theme="toptry"><div></div></li>
 </ul>
