--- a/html/dmt_attr.html
+++ b/html/dmt_attr.html
@@ -24,6 +24,7 @@
 						<option value="<?cs var:config.ex_report ?>">异常量</option>
 						<option value="<?cs var:config.str_report_d ?>">字符串型</option>
 						<option value="<?cs var:config.str_report_d_ip ?>">字符串型-IP省级</option>
+						<option value="<?cs var:config.data_percent ?>">百分比数值(0-100)</option>
 					</select>
 				</li>
                 <li>
@@ -36,6 +37,8 @@
 				    	<option value="15">15分钟</option>
 				    	<option value="30">30分钟</option>
 				    	<option value="60">1小时</option>
+				    	<option value="180">3小时</option>
+				    	<option value="360">6小时</option>
 				    	<option value="1439">1天</option>
 				    </select>
 				</li>
@@ -144,10 +147,14 @@ function daSetAttrList(attrinfo)
 		list += "<tr onclick='daSetSelAttr(" + i + ")'>";
 		list += "<td>" + listattr[i].id + "</td>";
 		list += "<td>" + listattr[i].name + "</td>";
-		list += "<td>" + listattr[i].attr_type + "</td>";
+		list += "<td>" + listattr[i].attr_type + ' [' + listattr[i].attr_type_id + ']</td>';
 
         if(listattr[i].static_time == 60)
     		list += "<td>1小时</td>";
+        else if(listattr[i].static_time == 180)
+    		list += "<td>3小时</td>";
+        else if(listattr[i].static_time == 360)
+    		list += "<td>6小时</td>";
         else if(listattr[i].static_time == 1439)
     		list += "<td>1天</td>";
         else
@@ -165,6 +172,8 @@ function daSetAttrList(attrinfo)
 			list += "<td>字符串型</td>";
 		else if(listattr[i].data_type == <?cs var:config.str_report_d_ip ?>)
 			list += "<td>字符串型-IP省级</td>";
+		else if(listattr[i].data_type == <?cs var:config.data_percent ?>)
+			list += "<td>百分比数值(0-100)</td>";
 		else if(listattr[i].data_type == <?cs var:config.ex_report ?>)
 		{
 			if(listattr[i].excep_attr_mask == 1)
