插件市场右键配置菜单弹出

--- a/html/dmt_dlg_machine_mod_plugin_cfg.html
+++ b/html/dmt_dlg_machine_mod_plugin_cfg.html
@@ -56,6 +56,7 @@ function ddmmpcSubmit(fm)
                 <li class='note-text' style='color:red;margin-left:30px'>未加载机器的当前配置，基于默认配置修改，请谨慎操作</li>
                 <?cs /if ?>
                 <li class='note-text' style='margin-left:30px'>请勾选要修改的配置项，未勾选的配置项不受影响</li>
+				<li class='note-text' style='margin-left:30px'>配置修改后更新到控制台有一定延迟，请勿频繁重复修改(至少间隔10秒)</li>
             </ul>
         </div>
         <br />
