--- a/html/resource/dwz.frag.html
+++ b/html/resource/dwz.frag.html
@@ -5,6 +5,12 @@
 </ul>
 </textarea>
 
+<textarea id="mypluginOpenInsClose">
+<ul id="mypluginCM">
+	<li rel="downconf">下载部署配置文件</li>
+</ul>
+</textarea>
+
 <textarea id="dialogFrag"><div class="dialog" style="top:150px; left:300px;">
     <div class="dialogHeader" onselectstart="return false;" oncopy="return false;" onpaste="return false;" oncut="return false;">
         <div class="dialogHeader_c">
